--- a/static/index.html
+++ b/static/index.html
@@ -1,14 +1,14 @@
 <html>
 	<head>
 		<title>Ditroye</title>
-		<script type="text/javascript" scr="js/vendor/jquery.js"></script>
-		<script type="text/javascript" src="js/vendor/underscore.js"></script>
-		<script type="text/javascript" src="js/vendor/backbone.js"></script>
-		<script type="text/javascript" src="js/application.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.4/underscore-min.js"></script>
+		<script type="text/javascript" src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
 	</head>
 	<body>
 		<h1>This is Ditroye</h1>
 		<button id="add-friend">Add Friend</button>
 		<ul id="friends-list">
+		<script type="text/javascript" src="js/application.js"></script>
 	</body>
 </html>
