Start working on javascript integration with backbone.js

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,16 @@
 		<script type="text/javascript" src="js/vendor/backbone.js"></script>
 	</head>
 	<body>
-		<h1>This is Ditroye</h1>
+		<div id="banner">
+			<a href="/app">
+				<h1>Ditroye</h1>
+			</a>
+			<h2>The ultimate calculator</h2>
+		</div>
+		<div id="search_panel">
+			<input  id="battle-tag" type="text" value="" />
+			<button id="search-profile">Search</button>
+		</div>
 		<button id="add-friend">Add Friend</button>
 		<ul id="friends-list">
 		<script type="text/javascript" src="js/application.js"></script>
