--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,15 @@
 <html>
-	<head>
-		<title>Ditroye</title>
-		<script type="text/javascript" src="js/vendor/jquery.js"></script>
-		<script type="text/javascript" src="js/vendor/underscore.js"></script>
-		<script type="text/javascript" src="js/vendor/backbone.js"></script>
-	</head>
-	<body>
+<head>
+	<title>Ditroye</title>
+	<script type="text/javascript" src="js/vendor/jquery.js"></script>
+	<script type="text/javascript" src="js/vendor/underscore.js"></script>
+	<script type="text/javascript" src="js/vendor/backbone.js"></script>
+	<script type="text/css">
+	
+	</script>
+</head>
+<body>
+	<div id="content">
 		<div id="banner">
 			<a href="/app">
 				<h1>Ditroye</h1>
@@ -16,8 +20,7 @@
 			<input  id="battle-tag" type="text" value="" />
 			<button id="search-profile">Search</button>
 		</div>
-		<button id="add-friend">Add Friend</button>
-		<ul id="friends-list">
-		<script type="text/javascript" src="js/application.js"></script>
-	</body>
+	</div>
+	<script type="text/javascript" src="js/application.js"></script>
+</body>
 </html>
