--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
 	<script type="text/javascript" src="js/vendor/jquery.js"></script>
 	<script type="text/javascript" src="js/vendor/underscore.js"></script>
 	<script type="text/javascript" src="js/vendor/backbone.js"></script>
-	<script type="text/css">
+	<style type="text/css">
 	
-	</script>
+	</style>
 </head>
 <body>
 	<div id="content">
